--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/drawer": "*",
-    "@react-navigation/native": "*",
+    "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "*",
     "expo": "^48.0.0",
     "expo-constants": "~14.2.1",
@@ -20,6 +22,7 @@
     "react-native": "0.71.8",
     "react-native-bouncy-checkbox": "*",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-maps": "1.3.2",
     "react-native-paper": "4.9.2",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
